src/objects/Tier3__mdt.object
<CustomObject>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X0_to_10__c</fullName>
        <label>0-10%</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10_to_20__c</fullName>
        <label>10.01-20%</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_to_30__c</fullName>
        <label>20.01-30%</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Tier 3</label>
    <pluralLabel>Tier 3</pluralLabel>
</CustomObject>